--- a/WpfApplication2/MainWindow.xaml
+++ b/WpfApplication2/MainWindow.xaml
@@ -231,7 +231,9 @@
                         <Grid Width="452">
                             <Button Content="Search nr of matches" HorizontalAlignment="Right" Margin="0,11,192,184" Name="button_search" Width="127" Click="button_search_click"  />
                             <TextBox FontSize="14" Height="26" HorizontalAlignment="Left" Margin="20,12,0,184" Name="textBox_search" Text="Search word" VerticalAlignment="Center" Width="108" />
+                            <TextBlock TextWrapping="Wrap" Name="search_result_window" HorizontalAlignment="Left" VerticalAlignment="Top"  Width="410" Margin="20,61,0,0" Background="BlanchedAlmond" Height="28"></TextBlock>
                             <TextBlock Background="BlanchedAlmond" Height="169" HorizontalAlignment="Left" Margin="20,43,0,0" Name="textBlock2" VerticalAlignment="Top" Width="410" />
+                            <TextBox FontSize="14" Height="40" HorizontalAlignment="Left" Margin="20,95,0,86" Name="textBox2_search_all" Text="your word" VerticalAlignment="Center" Width="186" />
                             <Button Click="button2_click_search_all_about" Content="Search all about it" HorizontalAlignment="Right" Margin="0,10,60,185" Name="button2" Width="127" />
                         </Grid>
                     </GroupBox>
@@ -541,7 +543,7 @@
             <TabItem Name="tab7" Header="Statistics" TabIndex="7" MouseUp="statistics_tab_mouseup" >
                 <Grid Background="#FF936870">
                     <Label Content="pagina cu statistici" Height="25" HorizontalAlignment="Left" Margin="5,3,0,0" Name="label_statistici" VerticalAlignment="Top" Width="200" />
-                    <GroupBox Header="general statistics" Margin="24,45,721,385">
+                    <GroupBox Header="general statistics" Margin="24,45,721,318">
                         <Grid Height="399" Width="310">
                             <Button Click="click_busiest_day_of_the_year" Content="show the busiest day of all years" Height="26" HorizontalAlignment="Left" Margin="109,6,0,0" Name="button16" VerticalAlignment="Top" Width="188" />
                             <Button Content="show the busiest week of the year" Height="26" HorizontalAlignment="Left" Margin="109,38,0,0" Name="button18" VerticalAlignment="Top" Width="188" Click="push_and_new_window_appears" />
@@ -555,16 +557,24 @@
                             <Button Content="show the most common problem" Height="26" HorizontalAlignment="Right" Margin="0,230,13,0" Name="button23" VerticalAlignment="Top" Width="188" />
                             <Button Content="show patient with max appointmts" Height="26" HorizontalAlignment="Right" Margin="0,262,13,0" Name="button24" VerticalAlignment="Top" Width="188" />
                             <Button Content="show patient with max problems" Height="26" HorizontalAlignment="Right" Margin="0,294,13,0" Name="button25" VerticalAlignment="Top" Width="188" />
-                            <Button Content="show patient with maxim costs" Height="26" HorizontalAlignment="Right" Margin="0,326,13,0" Name="button26" VerticalAlignment="Top" Width="188" />
-                            <Button Name="button271" Click="arata_graphic" Content="arata" HorizontalAlignment="Left" Margin="109,357,0,0" VerticalAlignment="Top" Width="188"/>
+                            <Button Click="graphic_2D_works_ok" Content="nr of appointements per years" Height="26" HorizontalAlignment="Right" Margin="0,326,13,0" Name="button26" VerticalAlignment="Top" Width="188" />
+                            <Button Click="show_graph_nr_of_appointments_per_month" Content="nr of appointements per months" Height="26" HorizontalAlignment="Right" Margin="0,357,13,0" Name="button28" VerticalAlignment="Top" Width="188" />
+                            <Button Name="button271" Click="delete_graphic" Content="delete graphic" HorizontalAlignment="Left" Margin="109,388,0,-11" VerticalAlignment="Top" Width="188"/>
                         </Grid>
                     </GroupBox>
-                    <Canvas Name="statistics_graph" HorizontalAlignment="Left" Height="437" Margin="363,54,0,0" VerticalAlignment="Top" Width="666" Background="Beige"/>
+                    <Canvas Name="statistics_graph" Background="White" Width="661" Height="765"
+                    VerticalAlignment="Center" HorizontalAlignment="Center" Margin="361,50,45,61" >
+                    </Canvas>
                 </Grid>
             </TabItem>
 
         </TabControl>
-        <TextBlock Background="Beige" Height="882" HorizontalAlignment="Left" Margin="1083,26,0,0" Name="development_messages_textBlock" Text="dev messages" VerticalAlignment="Top" Width="184" ScrollViewer.VerticalScrollBarVisibility="Visible" FontSize="10" />
+        <!--TextBlock Background="Beige" Height="882" HorizontalAlignment="Left" Margin="1083,26,0,0" Name="development_messages_textBlock" Text="dev messages" VerticalAlignment="Top" Width="184" ScrollViewer.VerticalScrollBarVisibility="Visible" FontSize="10" /-->
+        <DockPanel Margin="1083,27,0,0" Width="190" Height="885" HorizontalAlignment="Left" VerticalAlignment="Top" Background="Beige">
+            <ScrollViewer VerticalScrollBarVisibility="Auto">
+                <TextBlock Background="Beige" Width="184"  HorizontalAlignment="Left" VerticalAlignment="Top"  Name="development_messages_textBlock" Text="dev messages" FontSize="10" TextWrapping="Wrap"/>
+            </ScrollViewer>
+        </DockPanel>
     </Grid>
 
 
