--- a/WpfApplication2/MainWindow.xaml
+++ b/WpfApplication2/MainWindow.xaml
@@ -254,8 +254,8 @@
             <TabItem Name="tab3" Header="Appointments" TabIndex="3" MouseUp="appointments_tab_mouseup">
                 <Grid Background="#FF936870">
                     <Label Content="pagina de programari" Height="25" HorizontalAlignment="Left" Margin="5,3,0,0" Name="label_programari" VerticalAlignment="Top" Width="200" />
-                    <GroupBox Header="add appointment" Margin="44,33,741,685">
-                        <GroupBox Header="add appointment" Margin="24,33,740,606">
+                    
+                    <GroupBox Header="add appointment" Margin="24,33,740,664">
                         <Grid Height="115" Margin="19,38,-2,0" HorizontalAlignment="Left" Width="265" VerticalAlignment="Top">
 
                             <Grid.Resources>
@@ -280,7 +280,7 @@
                                 <RowDefinition Height="33*"/>
                             </Grid.RowDefinitions>
 
-                            <Button Content="set appointments for patient" Height="32" Margin="17,0,0,-24" Name="button_appointments_today" VerticalAlignment="Bottom" Click="button_set_new_appointments" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Width="152" Grid.Row="1" >
+                                                        <Button Content="set appointments for patient" Height="25" Margin="3,0,0,2" Name="button_appointments_today" VerticalAlignment="Bottom" Click="button_set_new_appointments" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Width="161" >
                                 <Button.RenderTransform>
                                     <TransformGroup>
                                         <ScaleTransform/>
@@ -290,7 +290,7 @@
                                     </TransformGroup>
                                 </Button.RenderTransform>
                             </Button>
-                            <TextBox  Height="32" HorizontalAlignment="Left" Margin="6,6,0,0" Name="textBox_appointments_patient" VerticalAlignment="Top" Width="106" >
+                            <TextBox  Height="28" HorizontalAlignment="Left" Margin="0,-13,0,0" Name="textBox_appointments_patient" VerticalAlignment="Top" Width="98" FontSize="16" FontFamily="SEGOEWP" FontWeight="ExtraBlack" Foreground="Black" >
                                 <TextBox.Style>
                                     <Style TargetType="{x:Type TextBox}">
                                         <Setter Property="Background" Value="White" />
@@ -302,17 +302,10 @@
                                     </Style>
                                 </TextBox.Style>
                             </TextBox>
-                            <DatePicker Name="datepicker_date_appointment" HorizontalAlignment="Left" Margin="10,43,0,0" VerticalAlignment="Top" Width="119" Height="33"/>
+                            <DatePicker Name="datepicker_date_appointment" HorizontalAlignment="Left" Margin="0,20,0,0" VerticalAlignment="Top" Width="119" Height="33"/>
 
-                            <TextBox Text="hh:mm" Height="32" Margin="0,44,33,0" Name="textBox_timeframe_start_appointment" VerticalAlignment="Top" HorizontalAlignment="Right" Width="46">
-                                <TextBox.ToolTip>
-                                    <ToolTip>
-                                        ! start time of appointment in following format--> hh:mm !
-                                    </ToolTip>
-                                </TextBox.ToolTip>
-                            </TextBox>
                             
-                            <TextBox Height="32" HorizontalAlignment="Left" Margin="117,6,0,0" Name="textbox_firstname_appointment" VerticalAlignment="Top" Width="110" >
+                            <TextBox Height="28" HorizontalAlignment="Left" Margin="103,-13,0,0" Name="textbox_firstname_appointment" VerticalAlignment="Top" Width="110" FontSize="16" FontFamily="SEGOEWP" FontWeight="ExtraBlack" Foreground="Black" >
                                 <TextBox.Style>
                                     <Style TargetType="{x:Type TextBox}">
                                         <Setter Property="Background" Value="White" />
@@ -324,15 +317,21 @@
                                     </Style>
                                 </TextBox.Style>
                             </TextBox>
-                            <TextBox Height="32" HorizontalAlignment="Left" Margin="134,43,0,0" Name="textBox_timeframe_stop_appointment" Text="hh:mm" VerticalAlignment="Top" Width="47" >
-                                <TextBox.ToolTip>
+                            <ComboBox Name="Pick_start_hour_appointment" HorizontalAlignment="Left" Height="29" Margin="124,24,0,0" VerticalAlignment="Top" Width="62" Loaded="Pick_start_hour_appointment_Loaded" SelectionChanged="Pick_start_hour_appointment_SelectionChanged" >
+                                <ComboBox.ToolTip>
                                     <ToolTip>
-                                        ! end time of appointment in following format--> hh:mm !
+                                        ! start time of appointment in following format--> hh:mm !
                                     </ToolTip>
-                                </TextBox.ToolTip>
-                            </TextBox>
-                            <ComboBox Name="Pick_start_hour_appointment" HorizontalAlignment="Left" Height="29" Margin="170,76,0,0" VerticalAlignment="Top" Width="62" Grid.RowSpan="2" Loaded="Pick_start_hour_appointment_Loaded" SelectionChanged="Pick_start_hour_appointment_SelectionChanged" />
-                                
+                                </ComboBox.ToolTip>
+                            </ComboBox>
+                            <ComboBox x:Name="Pick_stop_hour_appointment" HorizontalAlignment="Left" Height="29" Margin="191,24,0,0" VerticalAlignment="Top" Width="62" Loaded="Pick_stop_hour_appointment_Loaded" SelectionChanged="Pick_stop_hour_appointment_SelectionChanged" >
+                                <ComboBox.ToolTip>
+                                    <ToolTip>
+                                        ! stop time of appointment in following format--> hh:mm !
+                                    </ToolTip> 
+                                </ComboBox.ToolTip>
+                            </ComboBox>
+                        </Grid>  
                     </GroupBox>
 
                     <GroupBox Header="show info from database" Margin="438,164,422,554">
@@ -360,7 +359,7 @@
                     <Label Content="pagina cu tratamente" Height="25" HorizontalAlignment="Left" Margin="5,3,0,0" Name="label_tratamente" VerticalAlignment="Top" Width="200" />
                     <GroupBox Header="add treatment" Margin="22,53,764,663">
                         <Grid Height="115" Width="265">
-                            <Button Click="button_set_new_appointments" Content="set appointments for patient" Height="26" HorizontalAlignment="Left" Margin="6,83,0,0" Name="button8" VerticalAlignment="Top" Width="213" />
+                                                        <Button Click="button_set_new_treatment" Content="set appointments for patient" Height="26" HorizontalAlignment="Left" Margin="6,83,0,0" Name="button8" VerticalAlignment="Top" Width="213" />
                             <TextBox Height="32" HorizontalAlignment="Left" Margin="6,6,0,0" Name="textBox2" Text="Last name" VerticalAlignment="Top" Width="97" />
                             <TextBox Height="32" HorizontalAlignment="Left" Margin="6,44,0,0" Name="textBox3" Text="dd.mm.yyyy" VerticalAlignment="Top" Width="97" />
                             <TextBox Height="32" Margin="165,44,46,0" Name="textBox4" Text="hh:mm" VerticalAlignment="Top">
