--- a/WpfApplication2/MainWindow.xaml
+++ b/WpfApplication2/MainWindow.xaml
@@ -348,7 +348,7 @@
                     </GroupBox>
                     <TextBlock Name="textBlock_all_appointments"  HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="430"  Text="see here all the appointments in database" Background="Beige" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="5,0,0,0"  />
                     <TextBlock Name="textBlock_appointments_of_today" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="361" Text="see here all the appointments of today" Background="Beige" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="504,0,0,0" />
-                    <GroupBox Header="delete appointment" Margin="332,33,422,717">
+                    <GroupBox Header="delete appointment" Margin="332,33,422,585">
                         <Grid Margin="14,10,-2,10">
                             <Grid.Resources>
                                 <VisualBrush x:Key="Appointment_last_name_hint" Stretch="None" AlignmentX="Center" AlignmentY="Center" >
@@ -385,7 +385,7 @@
                                     </Style>
                                 </TextBox.Style>
                             </TextBox>
-                            <TextBox Height="28" HorizontalAlignment="Right" Margin="0,0,73,0" Name="appointment_first_name_delete_textBox" VerticalAlignment="Top" Width="112" FontSize="16" FontFamily="SEGOEWP" FontWeight="ExtraBlack" Foreground="Black" MouseRightButtonDown="afiseaza_appointments_in_listbox">
+                            <TextBox Height="28" HorizontalAlignment="Right" Margin="0,0,65,0" Name="appointment_first_name_delete_textBox" VerticalAlignment="Top" Width="112" FontSize="16" FontFamily="SEGOEWP" FontWeight="ExtraBlack" Foreground="Black" MouseWheel="afiseaza_appointments_in_listbox_1">
                                 <TextBox.Style>
                                     <Style TargetType="{x:Type TextBox}">
                                         <Setter Property="Background" Value="White" />
@@ -411,8 +411,16 @@
                             </ComboBox>
                             <Label Content="Start time" HorizontalAlignment="Left" Height="24" Margin="133,33,0,0" VerticalAlignment="Top" Width="62"/>
                             <Label Content="Appointment day" HorizontalAlignment="Left" Height="24" Margin="6,33,0,0" VerticalAlignment="Top" Width="115"/>
-                            <ListBox Name="listbox_appointments_to_be_deleted" HorizontalAlignment="Left" Height="94" Margin="6,90,0,0" VerticalAlignment="Top" Width="268" Grid.RowSpan="2"/>
-</Grid>
+                            <ListBox Name="listbox_appointments_to_be_deleted" HorizontalAlignment="Left" Height="94" Margin="6,90,0,0" VerticalAlignment="Top" Width="268" Grid.RowSpan="2">
+                                <ListBox.ItemTemplate>
+                                    <DataTemplate>
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBlock Text="{Binding}" />
+                                        </StackPanel>
+                                    </DataTemplate>
+                                </ListBox.ItemTemplate>
+                            </ListBox>
+                        </Grid>
                     </GroupBox>
                     <Label Content="Start time" HorizontalAlignment="Left" Height="29" Margin="168,108,0,0" VerticalAlignment="Top" Width="68"/>
                     <Label Content="Stop time" HorizontalAlignment="Left" Height="29" Margin="236,108,0,0" VerticalAlignment="Top" Width="73"/>
